--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -125,8 +125,8 @@ android {
                                 onesignal_google_project_number: "REMOTE"]
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
-        versionCode 4
-        versionName "1.3"
+        versionCode 9
+        versionName "1.8"
         ndk {
             abiFilters "armeabi-v7a", "x86"
         }
@@ -174,6 +174,7 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-geolocation-service')
     compile project(':react-native-fs')
     compile project(':react-native-image-picker')
     compile project(':react-native-android-location-enabler')
@@ -197,6 +198,12 @@ dependencies {
     implementation 'com.firebaseui:firebase-ui-auth:+'
     compile project(':react-native-sqlite-storage')
     implementation 'com.onesignal:OneSignal:[3.9.1, 3.99.99]'
+
+
+    compile(project(':react-native-geolocation-service')) {
+        exclude group: 'com.google.android.gms', module: 'play-services-location'
+    }
+    compile 'com.google.android.gms:play-services-location: 11.8.0'
 
 
 }
