--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-native-android-location-enabler": "^1.0.8",
     "react-native-background-task": "^0.2.1",
     "react-native-fs": "^2.13.3",
+    "react-native-geolocation-service": "^2.0.0",
     "react-native-image-picker": "^0.28.0",
     "react-native-local-mongodb": "^2.2.4",
     "react-native-maps": "^0.21.0",
