--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -125,8 +125,8 @@ android {
                                 onesignal_google_project_number: "REMOTE"]
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
-        versionCode 12
-        versionName "2.1"
+        versionCode 14
+        versionName "2.3"
         ndk {
             abiFilters "armeabi-v7a", "x86"
         }
@@ -188,16 +188,19 @@ dependencies {
 
 
     implementation fileTree(dir: "libs", include: ["*.jar"])
-    //implementation "com.android.support:appcompat-v7:${rootProject.ext.supportLibVersion}"
+    implementation "com.android.support:appcompat-v7:${rootProject.ext.supportLibVersion}"
     implementation "com.facebook.react:react-native:+"  // From node_modules
 
-    compile 'com.google.android.gms:play-services-base:+'
+    //compile 'com.google.android.gms:play-services-base:+'
     compile 'com.google.android.gms:play-services-location:+'
     compile 'com.google.android.gms:play-services-maps:+'
     implementation 'com.google.firebase:firebase-core:+'
     implementation 'com.firebaseui:firebase-ui-auth:+'
     compile project(':react-native-sqlite-storage')
     implementation 'com.onesignal:OneSignal:[3.9.1, 3.99.99]'
+    implementation 'com.google.firebase:firebase-messaging:18.0.0'
+    implementation 'com.google.firebase:firebase-iid:18.0.0'
+    implementation 'com.google.firebase:firebase-auth:17.0.0'
 
 
     compile(project(':react-native-geolocation-service')) {
