--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@babel/plugin-proposal-decorators": "^7.2.3",
+    "@babel/runtime": "^7.4.5",
     "@mapbox/react-native-mapbox-gl": "^6.1.3",
     "buffer": "^5.2.1",
     "es6-symbol": "^3.1.1",
@@ -16,7 +17,7 @@
     "native-base": "^2.10.0",
     "pouchdb-react-native": "^7.0.0-beta-1",
     "react": "16.6.0-alpha.8af6728",
-    "react-native": "0.57.3",
+    "react-native": "0.59",
     "react-native-android-location-enabler": "^1.0.8",
     "react-native-background-task": "^0.2.1",
     "react-native-fs": "^2.13.3",
@@ -29,7 +30,8 @@
     "react-native-signature-capture": "^0.4.9",
     "react-native-sqlite-storage": "^3.3.9",
     "react-native-vector-icons": "^6.1.0",
-    "react-navigation": "^2.18.3"
+    "react-navigation": "^2.18.3",
+    "react-timer-mixin": "^0.13.4"
   },
   "devDependencies": {
     "babel-jest": "23.6.0",
