--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -124,11 +124,11 @@ android {
                                 onesignal_google_project_number: "REMOTE"]
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
-        versionCode 14
-        versionName "2.3"
-        ndk {
-            abiFilters "armeabi-v7a", "x86"
-        }
+        versionCode 18
+        versionName "2.5"
+        // ndk {
+        //     abiFilters "armeabi-v7a", "x86"
+        // }
     }
     //}
     splits {
@@ -163,7 +163,8 @@ android {
         variant.outputs.each { output ->
             // For each separate APK per architecture, set a unique version code as described here:
             // http://tools.android.com/tech-docs/new-build-system/user-guide/apk-splits
-            def versionCodes = ["armeabi-v7a":1, "x86":2]
+            // def versionCodes = ["armeabi-v7a":1, "x86":2]
+            def versionCodes = ["x86":1,"x86_64":2,"armeabi-v7a":3,"arm64-v8a":4] 
             def abi = output.getFilter(OutputFile.ABI)
             if (abi != null) {  // null for the universal-debug, universal-release variants
                 output.versionCodeOverride =
