--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "@babel/plugin-proposal-decorators": "^7.2.3",
     "@babel/runtime": "^7.4.5",
     "@mapbox/react-native-mapbox-gl": "^6.1.3",
+    "@sentry/react-native": "^1.0.9",
+    "@sentry/wizard": "^1.0.1",
     "buffer": "^5.2.1",
     "es6-symbol": "^3.1.1",
     "jwt-decode": "^2.2.0",
